# axum-upload-local-and-cloud

./: Cargo.toml
src/: adapter_fs.rs  adapter_s3.rs  adapter_trait.rs  custom_error.rs  download_executor.rs  main.rs  upload_executor.rs
